16 August 2007

* Clarify headers/body again. The body offset is now the first byte of the
  body, so a mail of a single blank line has size == body == 1 (so, body
  size == 0 rather than 1). "\nBody" always had body == 1 and not having
  "\n" the same was confusing me.

15 August 2007

* A few POP3 servers supply an APOP cookie and then refuse the APOP command.
  Handle them with a "no-apop" flag to POP3 account statements to disable
  APOP. Reported by Frank Terbeck.

10 August 2007

* Combine append into write and exec into pipe even more to get rid of
  deliver-append.c and deliver-exec.c.
* add-from on stdout delivery is gone, an acceptable from line can be prepended
  using rewrite.

06 August 2007

* TDB is now a mandatory dependency.

03 August 2007

* Fetching from mboxes.

02 August 2007

* Handle IMAP mails properly if they have no trailing newline.
* Use APOP for POP3 or CRAM-MD5 for IMAP if offered by server. Note that fdm
  currently does NOT fall back to plaintext auth if the server offers APOP
  or CRAM-MD5 but it doesn't work.

01 August 2007

* fdm 1.3c released.
* Wrong size for match buffer in pcre.c. SF.net bug 1765524.
* Try to buffer as much as possible when reading, this prevents problems since
  SSL_read seems to buffer data itself which poll can't know about.
* Fix a bug with SSL where a "don't stop" error (want read/want write) would
  make fdm think there was data received when there wasn't, resulting in
  spurious new lines and fetching being aborted. This somehow failed to show
  up in the two months since 1.1 was released. Reported by Steven Mestdagh.

31 July 2007

* Accept only ".\r\n" as terminator for POP3 and NNTP, not a '.' followed by
  anything except '.'.
* Don't include a leading space in the POP3 UID.

30 July 2007

* fdm 1.3a and 1.3b released.
* Change to using setitimer for SSL_connect timeout. OpenBSD, and possibly
  others, limit SO_RCVTIMEO to 327 seconds. Also try smaller timeouts if setting