@@ -13,8 +13,6 @@
 - get only read/unread mail (IMAP only, probably) (read-only, unread-only)
   flags to account line
 - handle multiple header instances when looking for users (other places?)
-- fnmatch in find_header (don't forget ':') -- new: match_header (use in 
-  deliver-remove-header.c)
 - deliver to IMAP folder
 - refactor & clean up privsep mail transfer code
 - is there any reason struct mail shouldn't point to a struct account?
